--- a/grid.html
+++ b/grid.html
@@ -85,6 +85,7 @@
     <div class="item white4"></div>
 
     <div class="item"></div>
+    <p>"hello"</p>
     <div class="item yellow"></div>
     <div class="item black"></div>
   </div>
